# template-dl

./: .pre-commit-config.yaml  pyproject.toml
.claude/hooks/: session-start.sh
.devcontainer/: Dockerfile
.github/workflows/: ci.yaml
