[project]
name = "template-dl-devcontainer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib==3.10.8",
    "numpy==2.4.4",
    "pandas==3.0.2",
    "scikit-learn==1.8.0",
    "seaborn==0.13.2",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "wandb==0.25.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "mypy==1.19.1",
    "nbdev==2.4.14",
    "pre-commit>=4.1.0",
    "ruff==0.15.9",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
